- FEATURE: Implemented langauge locale picker, which allows previewing Opentype locl substitutions
- FEATURE: Implemented default translations for frontend strings
- FEATURE: Included translations: English, German, Finnish, Persian
- FEATURE: Added more Javascript events for various UI operations, making it easier to customise and extend the plugin
- TWEAK: Improved rendering for right-to-left languages in frontend and backend
- TWEAK: Fixed the warning about the minimum PHP version required for Fontsampler to be 5.6.33
- TWEAK: Warning and error messages now use the default Wordpress styling
- FIX: Fixed an issue where settings overwrites for the sample texts dropdown would incorrectly render the default settings' sample texts
- FIX: Fixed the appearance of color picker buttons in the Fontsampler admin area
- FIX: fix that prevents the same font file being loaded several times when used in several different Fontsamplers on the same page, potentially resulting in a MASSIVE performance improvement
- FIX: Implemented a fix that prevented "Oblique" styles from being detected as different than their roman counter-part 
- NOTICE: Deprecating Specimen and Link UI fields; those will get removed with 0.5.0 and replaced with hooks to enable customising
- NOTICE: Deprecating "Legacy formats" now still included (hidden by default) in the admin area; those will get removed with 0.5.0

# 0.3.7 & 0.3.8
- Implemented shortcode attribute to overwrite or dynamically set the default text
- Implemented shortcode attribute to overwrite or dynamically set the fonts and font files
- Implemented events called on the wrapper after initialisation and font change
- Now serving all frontend javascript assets as one minified file (previously 20+ dynamic file calls)
- Now serving all backend javascript assets as one minified file (previously 30+ dynamic file calls)
- Fixed a compability issue arising from other plugins using the same javascript dependency manager