@@ -4,6 +4,8 @@
 - FEATURE: Implemented default translations for frontend strings
 - FEATURE: Included translations: English, German, Finnish, Persian
 - FEATURE: Added more Javascript events for various UI operations, making it easier to customise and extend the plugin
+- FEATURE: Added 'fontsampler_enqueue_styles' filter hook to programatically trigger enqueuing the fontsampler styles (e.g. if you have programatically triggered the shortcode and want to ensure the styles are loaded in the head tag)
+- TWEAK: Improved shortcode detection and outputting of fontsampler styles to the header of pages on which the fontsampler shortcode is detected 
 - TWEAK: Improved rendering for right-to-left languages in frontend and backend
 - TWEAK: Fixed the warning about the minimum PHP version required for Fontsampler to be 5.6.33
 - TWEAK: Warning and error messages now use the default Wordpress styling
